# selise-mytime-autoclicker

./: CLAUDE.md  README.md  build.spec  main.py  mytime.py  pyproject.toml
src/autoclicker/: logging_setup.py  main.py
src/autoclicker/automation/: timesheet.py
src/autoclicker/autostart/: autostart.py
src/autoclicker/config/: credentials.py  paths.py  settings.py
src/autoclicker/scheduler/: __init__.py  scheduler.py
src/autoclicker/tray/: __init__.py  tray_icon.py
src/autoclicker/ui/: app.py  control_panel.py  main_window.py  settings_window.py  wizard.py
